--- a/client/ranking/ranking.html
+++ b/client/ranking/ranking.html
@@ -11,27 +11,30 @@
         <div class="tableau">
             <div class="title">
                 <img src="./asset/title.png" alt="title">
+
             </div>
-            <div class="players player1">
-                fdgdf
-            </div>
-            <div class="players player2">
-                gdfg
-            </div>
-            <div class="players player3">
-                dfgdfgdf
-            </div>
-            <div class="players player4">
-                dfgfg
-            </div>
-            <div class="players player5">
-                gfdf
-            </div>
+                <div class="listeplayer" id="listeplayer">
+                     <!-- <div class="players player1" id="player1">
+                        fdgdf
+                    </div>
+                    <div class="players player2" id="player2">
+                        gdfg
+                    </div>
+                    <div class="players player3" id="player3">
+                        dfgdfgdf
+                    </div>
+                    <div class="players player4" id="player4">
+                        dfgfg
+                    </div>
+                    <div class="players player5" id="player5">
+                        gfdf
+                    </div>-->
+                </div>
         </div>
         <div class="button">
             Return
         </div>
     </main>
-    
+    <script type="module" src="./ranking.js"></script>
 </body>
 </html>
