--- a/client/creationTeam/team.html
+++ b/client/creationTeam/team.html
@@ -14,6 +14,7 @@
     <div class="coprs">
         <div class="ecar">
             <div class="teamBuff">
+                <img src="../../image/buff/attack.png" alt="attack">
                 <p>TEAM 1</p>
             </div>
             <div class="equipe">
@@ -25,27 +26,21 @@
         <div class="midCard">
                 <h1>Select your buffs</h1>
                 <div class="buff">
+                    <img src="../../image/buff/attack.png" alt="attack">
                     <p>DGT CRIT +40%</p>
                 </div>
                 <div class="buff">
+                    <img src="../../image/buff/life.png" alt="life">
                     <p>Orbe +15% PV</p>
                 </div>
                 <div class="buff">
+                    <img src="../../image/buff/shield.png" alt="shield">
                     <p>Shield +20% déf</p>
                 </div>
                 <div class="table">
                     <table>
-                        <thead>
-                            <tr>
-                                <td class="listPerso">Name</td>
-                                <td class="listPerso">LVL</td>
-                                <td class="listPerso">ATK</td>
-                                <td class="listPerso">DEF</td>
-                                <td class="listPerso">PV</td>
-                                <td class="listPerso">ID</td>
-                            </tr>
-                        </thead>
-                        <tbody id="list"></tbody>
+                        <thead></thead>
+                        <tbody></tbody>
                     </table>
                 </div>
                 <button class="lancer" >start</button>
@@ -55,6 +50,7 @@
 
         <div class="ecar">
             <div class="teamBuff">
+                <img src="../../image/buff/shield.png" alt="shield">
                 <p>TEAM 2</p>
             </div>
             <div class="equipe">
