--- a/client/creationPlayer/player.html
+++ b/client/creationPlayer/player.html
@@ -16,43 +16,43 @@
         <table>
             <tbody>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Axe hero/male/1_idle/1.png" alt="Axe_M" id="axeM"></td>
-                    <td><img src="../../image/perso/Heros/Axe hero/female/1_idle/1.png" alt="Axe_F" id="axeF"></td>
-                    <td><img src="../../image/perso/Heros/Bandage hero/male/1_idle/1.png" alt="Bandage_M" id="bandageM"></td>
-                    <td><img src="../../image/perso/Heros/Bandage hero/female/1_idle/1.png" alt="Bandage_F" id="bandageF"></td>
+                    <td><img src="../../image/perso/Heros/Axe hero/male/1_idle/1.png" alt="Axe_M" id="axeM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Axe hero/female/1_idle/1.png" alt="Axe_F" id="axeF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Bandage hero/male/1_idle/1.png" alt="Bandage_M" id="bandageM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Bandage hero/female/1_idle/1.png" alt="Bandage_F" id="bandageF" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Blind hero/male/1_idle/1.png" alt="Blind_M" id="blindM"></td>
-                    <td><img src="../../image/perso/Heros/Blind hero/female/1_idle/1.png" alt="Blind_F" id="blindF"></td>
-                    <td><img src="../../image/perso/Heros/Cryo hero/male/1_idle/1.png" alt="Cryo_M" id="cryoM"></td>
-                    <td><img src="../../image/perso/Heros/Cryo hero/female/1_idle/1.png" alt="Cryo_F" id="cryoF"></td>
+                    <td><img src="../../image/perso/Heros/Blind hero/male/1_idle/1.png" alt="Blind_M" id="blindM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Blind hero/female/1_idle/1.png" alt="Blind_F" id="blindF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Cryo hero/male/1_idle/1.png" alt="Cryo_M" id="cryoM"  class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Cryo hero/female/1_idle/1.png" alt="Cryo_F" id="cryoF" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Dark hero/male/1_idle/1.png" alt="Dark_M" id="darkM"></td>
-                    <td><img src="../../image/perso/Heros/Dark hero/female/1_idle/1.png" alt="Dark_F" id="darkF"></td>
-                    <td><img src="../../image/perso/Heros/Electro hero/male/1_idle/1.png" alt="Electro_M" id="electroM"></td>
-                    <td><img src="../../image/perso/Heros/Electro hero/female/1_idle/1.png" alt="Electro_F" id="electroF"></td>
+                    <td><img src="../../image/perso/Heros/Dark hero/male/1_idle/1.png" alt="Dark_M" id="darkM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Dark hero/female/1_idle/1.png" alt="Dark_F" id="darkF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Electro hero/male/1_idle/1.png" alt="Electro_M" id="electroM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Electro hero/female/1_idle/1.png" alt="Electro_F" id="electroF" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Hammer hero/male/1_idle/1.png" alt="Hammer_M" id="hammerM"></td>
-                    <td><img src="../../image/perso/Heros/Hammer hero/female/1_idle/1.png" alt="Hammer_F" id="hammerF"></td>
-                    <td><img src="../../image/perso/Heros/Hydro hero/male/1_idle/1.png" alt="Hydro_M" id="hydroM"></td>
-                    <td><img src="../../image/perso/Heros/Hydro hero/female/1_idle/1.png" alt="Hydro_F" id="hydroF"></td>
+                    <td><img src="../../image/perso/Heros/Hammer hero/male/1_idle/1.png" alt="Hammer_M" id="hammerM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hammer hero/female/1_idle/1.png" alt="Hammer_F" id="hammerF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hydro hero/male/1_idle/1.png" alt="Hydro_M" id="hydroM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hydro hero/female/1_idle/1.png" alt="Hydro_F" id="hydroF" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Pyro hero/male/1_idle/1.png" alt="Pyro_M" id="pyroM"></td>
-                    <td><img src="../../image/perso/Heros/Pyro hero/female/1_idle/1.png" alt="Pyro_F" id="pyroF"></td>
-                    <td><img src="../../image/perso/Heros/Skull hero/male/1_idle/1.png" alt="Skull_M" id="skullM"></td>
-                    <td><img src="../../image/perso/Heros/Skull hero/female/1_idle/1.png" alt="Skull_F" id="skullF"></td>
+                    <td><img src="../../image/perso/Heros/Pyro hero/male/1_idle/1.png" alt="Pyro_M" id="pyroM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Pyro hero/female/1_idle/1.png" alt="Pyro_F" id="pyroF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Skull hero/male/1_idle/1.png" alt="Skull_M" id="skullM" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Skull hero/female/1_idle/1.png" alt="Skull_F" id="skullF" class="modal-image"></td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="cardHero" id="card">
         <form action="player.html" method="get">
+            <span class="close">&times;</span>
             <input type="text" name="username" id="inputName" placeholder="username">
-            <img src="../img/heros_gif/AXE/axe-female-idle.gif" alt="Axe-f">
-            <p class="statHero" id="nameHero"></p>
+            <img id="modalImage" alt="Axe-f">
             <p class="statHero">ATK</p>
             <p class="statHero">DEF</p>
             <p class="statHero">PV</p>
