--- a/client/ranking/ranking.html
+++ b/client/ranking/ranking.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./ranking.css">
+    <link rel="stylesheet" href="./essai.css">
     <title>Top 5</title>
 </head>
 <body>
@@ -14,21 +14,7 @@
 
             </div>
                 <div class="listeplayer" id="listeplayer">
-                     <!-- <div class="players player1" id="player1">
-                        fdgdf
-                    </div>
-                    <div class="players player2" id="player2">
-                        gdfg
-                    </div>
-                    <div class="players player3" id="player3">
-                        dfgdfgdf
-                    </div>
-                    <div class="players player4" id="player4">
-                        dfgfg
-                    </div>
-                    <div class="players player5" id="player5">
-                        gfdf
-                    </div>-->
+
                 </div>
         </div>
         <div class="button">
