22-08-23 rank credit sound

--- a/client/ranking/ranking.html
+++ b/client/ranking/ranking.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./essai.css">
+    <link rel="stylesheet" href="./ranking.css">
     <title>Top 5</title>
 </head>
 <body>
+    <audio autoplay>
+        <source src="./assetracking/top5.mp3" type="audio/mpeg" />
+    </audio>
     <main>
         <div class="tableau">
             <div class="title">
-                <img src="./asset/title.png" alt="title">
+                <img src="./assetracking/title.png" alt="title">
 
             </div>
                 <div class="listeplayer" id="listeplayer">
