--- a/client/creationPlayer/player.html
+++ b/client/creationPlayer/player.html
@@ -16,47 +16,48 @@
         <table>
             <tbody>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Axe hero/male/1_idle/1.png" alt="Axe_M" id="axeM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Axe hero/female/1_idle/1.png" alt="Axe_F" id="axeF" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Bandage hero/male/1_idle/1.png" alt="Bandage_M" id="bandageM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Bandage hero/female/1_idle/1.png" alt="Bandage_F" id="bandageF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Axe hero/male/1_idle/1.png" alt="Axe_M" id="2" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Axe hero/female/1_idle/1.png" alt="Axe_F" id="1" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Bandage hero/male/1_idle/1.png" alt="Bandage_M" id="10" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Bandage hero/female/1_idle/1.png" alt="Bandage_F" id="9" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Blind hero/male/1_idle/1.png" alt="Blind_M" id="blindM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Blind hero/female/1_idle/1.png" alt="Blind_F" id="blindF" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Cryo hero/male/1_idle/1.png" alt="Cryo_M" id="cryoM"  class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Cryo hero/female/1_idle/1.png" alt="Cryo_F" id="cryoF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Blind hero/male/1_idle/1.png" alt="Blind_M" id="4" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Blind hero/female/1_idle/1.png" alt="Blind_F" id="3" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Cryo hero/male/1_idle/1.png" alt="Cryo_M" id="6"  class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Cryo hero/female/1_idle/1.png" alt="Cryo_F" id="5" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Dark hero/male/1_idle/1.png" alt="Dark_M" id="darkM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Dark hero/female/1_idle/1.png" alt="Dark_F" id="darkF" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Electro hero/male/1_idle/1.png" alt="Electro_M" id="electroM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Electro hero/female/1_idle/1.png" alt="Electro_F" id="electroF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Dark hero/male/1_idle/1.png" alt="Dark_M" id="8" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Dark hero/female/1_idle/1.png" alt="Dark_F" id="7" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Electro hero/male/1_idle/1.png" alt="Electro_M" id="12" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Electro hero/female/1_idle/1.png" alt="Electro_F" id="11" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Hammer hero/male/1_idle/1.png" alt="Hammer_M" id="hammerM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Hammer hero/female/1_idle/1.png" alt="Hammer_F" id="hammerF" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Hydro hero/male/1_idle/1.png" alt="Hydro_M" id="hydroM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Hydro hero/female/1_idle/1.png" alt="Hydro_F" id="hydroF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hammer hero/male/1_idle/1.png" alt="Hammer_M" id="14" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hammer hero/female/1_idle/1.png" alt="Hammer_F" id="13" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hydro hero/male/1_idle/1.png" alt="Hydro_M" id="16" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Hydro hero/female/1_idle/1.png" alt="Hydro_F" id="15" class="modal-image"></td>
                 </tr>
                 <tr>
-                    <td><img src="../../image/perso/Heros/Pyro hero/male/1_idle/1.png" alt="Pyro_M" id="pyroM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Pyro hero/female/1_idle/1.png" alt="Pyro_F" id="pyroF" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Skull hero/male/1_idle/1.png" alt="Skull_M" id="skullM" class="modal-image"></td>
-                    <td><img src="../../image/perso/Heros/Skull hero/female/1_idle/1.png" alt="Skull_F" id="skullF" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Pyro hero/male/1_idle/1.png" alt="Pyro_M" id="18" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Pyro hero/female/1_idle/1.png" alt="Pyro_F" id="17" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Skull hero/male/1_idle/1.png" alt="Skull_M" id="20" class="modal-image"></td>
+                    <td><img src="../../image/perso/Heros/Skull hero/female/1_idle/1.png" alt="Skull_F" id="19" class="modal-image"></td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="cardHero" id="card">
-        <form action="player.html" method="get">
+        <form action="player.html" method="get" id="user-form">
             <span class="close">&times;</span>
             <input type="text" name="username" id="inputName" placeholder="username">
-            <img id="modalImage" alt="Axe-f">
+            <img id="modalImage">
+            <p class="statHero" id="namechar"></p>
             <p class="statHero">ATK</p>
             <p class="statHero">DEF</p>
             <p class="statHero">PV</p>
-            <button class="btnSubmit">ENREGISTRER</button>
+            <button type="submit" class="btnSubmit">ENREGISTRER</button>
         </form>
     </div>
     <script src="player.js"></script>
