--- a/client/creationPlayer/player.html
+++ b/client/creationPlayer/player.html
@@ -54,9 +54,9 @@
             <input type="text" name="username" id="inputName" placeholder="username">
             <img id="modalImage">
             <p class="statHero" id="namechar"></p>
-            <p class="statHero">ATK</p>
-            <p class="statHero">DEF</p>
-            <p class="statHero">PV</p>
+            <p class="statHero" id="attchar"></p><span>x ATK</span>
+            <p class="statHero" id="defchar"></p><span>x DEF</span>
+            <p class="statHero">200 PV</p>
             <button type="submit" class="btnSubmit">ENREGISTRER</button>
         </form>
     </div>
