--- a/client/creationPlayer/player.html
+++ b/client/creationPlayer/player.html
@@ -9,21 +9,19 @@
 <body>
 
 
-
-
-
-
-
-
     <nav class="navBtn">
         <div class="button">
             <a href="#">Team</a>
         </div>
-        <h1>Select your GLADIATORS</h1>
+        
         <div class="button" style="right: 10px;">
             <a href="#">Return</a>
         </div>
     </nav>
+
+<h1>SELECT YOUR GLADIATORS</h1>
+
+
     <div class="tableSelection">
         <table>
             <tbody>
@@ -62,13 +60,13 @@
     </div>
     <div class="cardHero" id="card">
         <form action="player.html" method="get" id="user-form">
-            <span class="close">&times;</span>
+            <!-- <span class="close">&times;</span> -->
             <input type="text" name="username" id="inputName" placeholder="username">
             <img id="modalImage">
             <p class="statHero" id="namechar"></p>
-            <p class="statHero" id="attchar"></p><span>x ATK</span>
-            <p class="statHero" id="defchar"></p><span>x DEF</span>
-            <p class="statHero">200 PV</p>
+            <p class="statHero" id="attchar"></p>
+            <p class="statHero" id="defchar"></p>
+            <p class="statHero" >PV 1</p>
             <button type="submit" class="btnSubmit">ENREGISTRER</button>
         </form>
     </div>
