--- a/client/creationTeam/team.html
+++ b/client/creationTeam/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>createPlayer</title>
+    <title>createTeam</title>
     <link rel="stylesheet" href="team.css">
 </head>
 <body>
@@ -39,8 +39,16 @@
                 </div>
                 <div class="table">
                     <table>
-                        <thead></thead>
-                        <tbody></tbody>
+                        <thead>
+                            <tr>
+                                <th class="listPerso">PSEUDO</th>
+                                <th class="listPerso">LVL</th>
+                                <th class="listPerso">ATK</th>
+                                <th class="listPerso">DEF</th>
+                                <th class="listPerso">ID</th>
+                            </tr>
+                        </thead>
+                        <tbody id="list"></tbody>
                     </table>
                 </div>
                 <button class="lancer" >start</button>
