--- a/client/creationTeam/team.html
+++ b/client/creationTeam/team.html
@@ -25,7 +25,7 @@
 					<div class="img_container">
 						<div class="img_container1">
 							<img
-								src="../../asset/image/fleche-gauche-forme-triangulaire-noire.png"
+								src="./asset/gauche.png"
 								width="20px"
 								height="20px"
 								alt="fleche"
@@ -33,7 +33,7 @@
 								class="buff-epee"
 							/>
 							<img
-								src="../../asset/image/epee.png"
+								src="./asset/epee.png"
 								width="60px"
 								height="60px"
 								alt="epee"
@@ -42,7 +42,7 @@
 							/>
 
 							<img
-								src="../../asset/image/triangle-noir-fleche-droite.png"
+								src="./asset/droite.png"
 								width="20px"
 								height="20px"
 								alt="fleche"
@@ -53,7 +53,7 @@
 						</div>
 						<div class="img_container2">
 							<img
-								src="../../asset/image/fleche-gauche-forme-triangulaire-noire.png"
+								src="./asset/gauche.png"
 								width="20px"
 								height="20px"
 								alt="fleche"
@@ -61,7 +61,7 @@
 								class="buff-epee"
 							/>
 							<img
-								src="../../asset/image/bouclier.png"
+								src="./asset/bouclier.png"
 								width="60px"
 								height="60px"
 								alt="bouclier"
@@ -69,7 +69,7 @@
 								class="buff"
 							/>
 							<img
-								src="../../asset/image/triangle-noir-fleche-droite.png"
+								src="./asset/droite.png"
 								width="20px"
 								height="20px"
 								alt="fleche"
@@ -80,7 +80,7 @@
 						</div>
 						<div class="img_container3">
 							<img
-								src="../../asset/image/fleche-gauche-forme-triangulaire-noire.png"
+								src="./asset/gauche.png"
 								width="20px"
 								height="20px"
 								alt="fleche"
@@ -88,7 +88,7 @@
 								class="buff-epee"
 							/>
 							<img
-								src="../../asset/image/cercle.png"
+								src="./asset/cercle.png"
 								width="60px"
 								height="60px"
 								alt="cercle"
@@ -96,7 +96,7 @@
 								class="buff"
 							/>
 							<img
-								src="../../asset/image/triangle-noir-fleche-droite.png"
+							src="./asset/droite.png"
 								width="20px"
 								height="20px"
 								alt="fleche"
