--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,13 @@
             <a href="./credits/credits.html">Credit</a>
         </div>
     </div>
+    <div>
+        <a href="./creationPlayer/player.html">
+            <div class="entrer">
+                Entrer
+            </div>
+        </a>
+    </div>
     
 </body>
 </html>
