tentative generation backgrounds

--- a/client/battle fight/battle.html
+++ b/client/battle fight/battle.html
@@ -5,10 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Gladiators</title>
+  <link rel="stylesheet" href="battle.css">
 </head>
 
 <body>
+  <header>
+    <h1>The Gladiators</h1>
+  </header>
 
+  <section class="arena">
+    <div class="arenaContainer">
+      <img id="arenaBattle" src="../img/arena_jpg/" alt="randomArena">
+    </div>
+  </section>
+
+
+
+  <script src="battle.js"></script>
 </body>
 
 </html>
