--- a/client/creationTeam/team.html
+++ b/client/creationTeam/team.html
@@ -11,6 +11,9 @@
 			<div class="button" id="buttong">
 				<a href="../creationPlayer/player.html">Create</a>
 			</div>
+			<div class="message" id="message">
+				Message
+			</div>
 			<div class="button" id="buttond">
 				<a href="../index.html">Return</a>
 			</div>
@@ -120,9 +123,45 @@
 		<div class="cardsEmpty">
 			<div class="cardEmpty1">
 				<div class="cardEmptyText">EMPTY TEAM</div>
+				<div class = "playerTeam1">
+					<div style="display: flex;flex-direction: row;">
+						<div class = "playerT1 playerT1-5" style ="border: 2px solid red;">
+							<img src="../imgperso/blind-female-idle-left.gif" alt="Blind_M" id="3" class="modal-image">
+							</div>
+						<div class = "playerT1 playerT1-4" style ="border: 2px solid red;">AAAAAAAAAA</div>
+					</div>
+					<div style="display: flex;flex-direction: row;">
+						<div class = "blank" style ="border: 2px solid red;">AAAAAAAAAA</div>
+						<div class = "playerT1 playerT1-3" style ="border: 2px solid red;">AAAAAAAAAA</div>
+						<div class = "blank" style ="border: 2px solid red;">AAAAAAAAAA</div>
+					</div>
+					<div style="display: flex;flex-direction: row;">
+						<div class = "playerT1 playerT1-2" style ="border: 2px solid red;">AAAAAAAAAA</div>
+						<div class = "playerT1 playerT1-1" style ="border: 2px solid red;">AAAAAAAAAA</div>
+					</div>
+				</div>
 			</div>
 			<div class="cardsBattle">
 				<div class="cardBattle">
+					<div class="wraptable">
+						<table class="fixed_header">
+							<thead>
+								<tr>
+									<th></th>
+									<th>Player Name</th>
+									<th>ATK</th>
+									<th>DEF</th>
+									<th>PV</th>
+									<th>Icone</th>
+									<th></th>
+								
+								</tr>
+							</thead>
+							<tbody id ="tableBody">	
+		
+							</tbody>
+						</table>
+					</div>
 					<div class="btn">
 						<div class="btn_text">START</div>
 					</div>
@@ -131,8 +170,34 @@
 
 			<div class="cardEmpty2">
 				<div class="cardEmptyText">EMPTY TEAM</div>
+				<div class = "playerTeam2">
+					<div style="display: flex;flex-direction: row;">
+						<div class = "playerT1 playerT2-5" style ="border: 2px solid red;">
+							<img src="../imgperso/blind-female-idle-right.gif" alt="Blind_M" id="3" class="modal-image">
+						</div>
+						<div class = "playerT1 playerT2-4" style ="border: 2px solid red;">
+							<img src="../imgperso/blind-female-idle-right.gif" alt="Blind_M" id="3" class="modal-image">
+						</div>
+					</div>
+					<div style="display: flex;flex-direction: row;">
+						<div class = "blank" style ="border: 2px solid red;"></div>
+						<div class = "playerT1 playerT2-3" style ="border: 2px solid red;">
+							<img src="../imgperso/blind-female-idle-right.gif" alt="Blind_M" id="3" class="modal-image">
+						</div>
+						<div class = "blank" style ="border: 2px solid red;"></div>
+					</div>
+					<div style="display: flex;flex-direction: row;">
+						<div class = "playerT1 playerT2-2" style ="border: 2px solid red;">
+							<img src="../imgperso/blind-female-idle-right.gif" alt="Blind_M" id="3" class="modal-image">
+						</div>
+						<div class = "playerT1 playerT2-1" style ="border: 2px solid red;">
+							<img src="../imgperso/blind-female-idle-right.gif" alt="Blind_M" id="3" class="modal-image">
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script type="module" src="./team.js"></script>
+		
 	</body>
 </html>
