29-08-23 fin de journee

--- a/client/creationTeam/team.html
+++ b/client/creationTeam/team.html
@@ -12,7 +12,7 @@
 				<a href="../creationPlayer/player.html">Create</a>
 			</div>
 			<div class="message" id="message">
-				Message
+				
 			</div>
 			<div class="button" id="buttond">
 				<a href="../index.html">Return</a>
@@ -56,7 +56,7 @@
 								id="fleche-epee-droite"
 								class="buff-fleche"
 							/>
-							<div class="img_text">DGT CRIT +40%</div>
+							<div class="img_text">Sword +5 Att</div>
 						</div>
 						<div class="img_container2">
 							<img
@@ -83,7 +83,7 @@
 								id="fleche-bouclier-droite"
 								class="buff-fleche"
 							/>
-							<div class="img_text">Shield +20% déf</div>
+							<div class="img_text">Shield +5 def</div>
 						</div>
 						<div class="img_container3">
 							<img src="./asset/gauche.png" width="20px" height="20px" alt="fleche" id="fleche-cercle-gauche"	class="buff-fleche"	/>
@@ -103,7 +103,7 @@
 								id="fleche-cercle-droite"
 								class="buff-fleche"
 							/>
-							<div class="img_text">Orbe +15% PV</div>
+							<div class="img_text">Orbe +5 PV</div>
 						</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 		</div>
 		<div class="cardsEmpty">
 			<div class="cardEmpty1">
-				<div class="cardEmptyText">EMPTY TEAM</div>
+				<div class="cardEmptyText1" id ="cardEmptyText1">CLEAN TEAM</div>
 				<div class = "playerTeam1">
 					<div style="display: flex;flex-direction: row;">
 						<div class = "playerT1 playerT1-5">
@@ -155,13 +155,13 @@
 						</table>
 					</div>
 					<div class="btn">
-						<div class="btn_text">START</div>
+						<div class="btn_start" id = "btn_start">START</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="cardEmpty2">
-				<div class="cardEmptyText">EMPTY TEAM</div>
+				<div class="cardEmptyText2" id="cardEmptyText2">CLEAN TEAM</div>
 				<div class = "playerTeam2">
 					<div style="display: flex;flex-direction: row;">
 						<div class = "playerT2 playerT2-5">
